# finupdate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PATTERNS.md  README.md  build.sh  justfile  meson.build  meson_options.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
build-aux/: 49-finupdate.polkit.rules  bench-network.sh  dist-vendor.sh  org.projectbluefin.Finpilot.Devel.json  org.projectbluefin.Finpilot.json  org.projectbluefin.Finupdate.Devel.json  org.projectbluefin.Finupdate.json
data/: finupdate-runner  meson.build  org.projectbluefin.Finpilot.desktop  org.projectbluefin.Finpilot.desktop.in  org.projectbluefin.Finpilot.metainfo.xml  org.projectbluefin.Finpilot.metainfo.xml.in  org.projectbluefin.Finupdate.desktop.in  org.projectbluefin.Finupdate.metainfo.xml.in
docs/: GUI_TESTING.md  POLKIT_RULES.md  app-logic-map.md  uupd-config.example.json  uupd-config.md  uupd-config.schema.json
gnome-shell-extension/: extension.js  metadata.json  stylesheet.css
src/: app.rs  config.rs  config.rs.in  dbus_progress.rs  gpu.rs  main.rs  meson.build  orchestrator.rs  registry_client.rs  sbom_diff.rs  service.rs  settings.rs  update_worker.rs  uupd_compat.rs
src/ui/: log_view.rs  mod.rs  preferences.rs  rebase_dialog.rs  segmented_progress.rs  status_view.rs  update_check_dialog.rs  update_list.rs
tests/smoke/features/: environment.py  finupdate.feature
tests/smoke/features/steps/: steps.py
