[package]
name = "finupdate"
version = "0.1.0"
edition = "2024"
description = "A system update frontend for uupd — part of the Bluefin utility suite"
license = "MIT"
authors = ["Project Bluefin Contributors"]

rust-version = "1.85"

[dependencies]
# GTK4 Rust bindings — v0.11.x maps to GTK 4.16+ / GNOME 47+
# v4_16 feature enables modern APIs (ShortcutsWindow builder methods, etc.)
gtk = { version = "0.11", package = "gtk4", features = ["v4_16"] }

# libadwaita bindings — v0.9.x maps to libadwaita 1.7+ / GNOME 47+
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }

# Relm4 — component-based reactive framework for GTK4
# The "libadwaita" feature replaces gtk::Application with adw::Application
relm4 = { version = "0.11", features = ["libadwaita"] }

# Tokio for async subprocess management
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }

# Tracing for structured logging (GNOME apps typically use structured logs)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Settings persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
