[package]
name = "finupdate"
version = "0.1.0"
edition = "2024"
description = "A system update frontend for uupd — part of the Bluefin utility suite"
license = "MIT"
authors = ["Project Bluefin Contributors"]

rust-version = "1.85"

[dependencies]
# GTK4 Rust bindings — v0.11.x maps to GTK 4.16+ / GNOME 47+
# v4_16 feature enables modern APIs (ShortcutsWindow builder methods, etc.)
gtk = { version = "0.11", package = "gtk4", features = ["v4_16"] }

# libadwaita bindings — v0.9.x maps to libadwaita 1.7+ / GNOME 47+
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }

# Relm4 — component-based reactive framework for GTK4
# The "libadwaita" feature replaces gtk::Application with adw::Application
relm4 = { version = "0.11", features = ["libadwaita"] }

# Tokio for async subprocess management
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }

# Tracing for structured logging (GNOME apps typically use structured logs)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serde for settings persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pangocairo — text layout in gtk::DrawingArea (segmented progress bar labels).
# Wraps the pangocairo C library which ships with GNOME SDK 50.
pangocairo = "0.22"

# HTTP client for GHCR registry queries (rebase calendar).
# rustls-tls: pure-Rust TLS — no system OpenSSL needed inside the Flatpak sandbox.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Date/time utilities — used to parse YYYYMMDD image tags and display build dates.
chrono = { version = "0.4", features = ["serde"] }

# futures::future::join_all — parallel manifest fetches in registry_client.
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# thiserror — ergonomic error type derivation for RegistryError.
thiserror = "1"

# anyhow — simple error propagation for async helpers.
anyhow = "1"

# OCI registry client — pure-Rust, used for SBOM referrer discovery and pull.
# rustls-tls: no system OpenSSL needed inside the Flatpak sandbox.
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
# test-util enables `#[tokio::test(start_paused = true)]` so tests that drive
# simulated event sequences with internal sleeps run in virtual time, not wall clock.
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
tempfile = "3"
